--- a/Impressionable-Android/app/build.gradle
+++ b/Impressionable-Android/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile project(':jackson-core-2.8.4')
     compile project(':jackson-databind-2.8.4')
     compile project(':javax.json-api-1.0')
+    compile project(':commons-net-3.3')
+    compile project(':dropbox-core-sdk-2.1.2')
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
